--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -63,7 +63,7 @@
         >
           <mat-icon>shopping_cart</mat-icon>
         </button>
-        <button mat-icon-button aria-label="Usuario">
+        <button mat-icon-button aria-label="Usuario" routerLink="/login">
           <mat-icon>account_circle</mat-icon>
         </button>
       </div>
